--- a/assets/SCSS/styles.scss
+++ b/assets/SCSS/styles.scss
@@ -1,69 +1,4 @@
 $font-family-base: "Noto Sans", sans-serif;
-
-.content{
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 40px 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
-}
-.header{
-    padding: 10px;
-}
-.container{
-    width: 100%;
-}
-.title-page{
-    font-family: $font-family-base;
-    font-size: 28px;
-    font-weight: 700;
-    margin-top: 24px;
-    margin-bottom: 24px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    color: hsl(227, 75%, 14%);
-}
-.filter-buttons{
-    display: flex;
-    gap: 10px;
-}
-.filter-buttons button {
-    padding: 8px 16px;
-    border: none;
-    border-radius: 20px;
-    background-color: hsl(200, 60%, 99%);
-    font-size: 14px;
-    cursor: pointer;
-
-    &:hover{
-        background-color: hsl(3, 71%, 56%);
-    }
-}
-
-.theme{
-    background-color: hsl(0, 0%, 93%);
-    border-radius: 8px;
-    padding: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &.sun{
-        background-color: hsl(226, 11%, 37%);
-    }
-}
-.icon{
-    width: 100%;
-    height: auto;
-    display: none;
-}
-.icon.show{
-    display: block;
-}
 .background{
     background: linear-gradient(180deg, #EBF2FC 0%, #EEF8F9 100%);
     height: 100vh;
@@ -76,111 +11,228 @@ $font-family-base: "Noto Sans", sans-serif;
         align-items: center;
         width: 100%;
         border-radius: 16px;
+        padding: 10px;
     }
-}
-.card{
-    background-color: hsl(200, 60%, 99%);
-    border-radius: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-    // pedi ajuda ao copilot para ajustar a largura 
-    width: 450px;
-    padding: 20px;
-    
-    &-top{
+
+    .content{
+        max-width: 1400px;
+        margin: 0 auto;
+        padding: 40px 20px;
         display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-        margin-bottom:16px;
+        flex-direction: column;
+        align-items: center;
+        gap: 24px;
     }
-
-    .image{
-        width: 60px;
-        height: 60px;  
-        margin-right: 16px;
-        display: flex;
-    }
-
-    .info{
-
-        .title{
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 700;
-            font-size: 24px;
-            color: hsl(225, 23%, 24%);
-            margin-bottom: 8px;
-        }
-
-        .description{
-            font-family: $font-family-base;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 14px;
-            text-align: center;
-            color: hsl(226, 11%, 37%);        
+    .logo{
+        display: none;
+        &.show{
+            display: block;
         }
     }
-
-    .buttons{
+    .container{
+        width: 100%;
+    }
+    .page-top{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 100%;
 
-        .remove{
-            color: hsl(227, 75%, 14%);
-            border-radius: 8px;
-            border: none;
-            width: 100px;
-            height: 40px;
-            cursor: pointer;
+    }
+    .title-page{
+        font-family: $font-family-base;
+        font-size: 28px;
+        font-weight: 700;
+        margin-top: 24px;
+        margin-bottom: 24px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        color: hsl(227, 75%, 14%);
+    }
+    .filters{
+        display: flex;
+        gap: 10px;
+        margin-bottom: 16px;
 
-            &:hover{
-                background-color:hsl(3, 77%, 44%) ;
-            }   
+    }
+    .filter-btn {
+        padding: 8px 16px;
+        border: none;
+        cursor: pointer;
+        //   PEGUEI AJUDA DO COPILOT PARA FAZER ESSA PARTE DE DAR O MARGIN,PXS,ETC
+        margin: 0 5px;
+        font-size: 16px;
+        border-radius: 25px;
+        background-color: hsl(200, 60%, 99%);
+
+        &:hover{
+            background-color: hsl(3, 71%, 56%);
+            color: hsl(200, 60%, 99%);
         }
-        .switch{
-            position: relative;
-            width: 50px;
-            height: 25px;
+        &.active-btn {
+            background: hsl(3, 77%, 44%) !important;
+            color: hsl(200, 60%, 99%);
+        }
+    }
+    
 
-            .input{
-                opacity: 0;
-                width: 0;
-                height: 0;
+
+    .theme{
+        background-color: hsl(0, 0%, 93%);
+        border-radius: 8px;
+        padding: 8px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &.sun{
+            background-color: hsl(226, 11%, 37%);
+        }
+    }
+    .icon{
+        width: 100%;
+        height: auto;
+        display: none;
+    }
+    .icon.show{
+        display: block;
+    }
+
+    .card{
+        background-color: hsl(200, 60%, 99%);
+        border-radius: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        // pedi ajuda ao copilot para ajustar a largura 
+        width: 450px;
+        padding: 20px;
+        
+        &-top{
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            margin-bottom:16px;
+        }
+
+        .image{
+            width: 60px;
+            height: 60px;  
+            margin-right: 16px;
+            display: flex;
+        }
+
+        .info{
+
+            .title{
+                font-family: $font-family-base;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 24px;
+                color: hsl(225, 23%, 24%);
+                margin-bottom: 8px;
             }
-            .slider{
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
+
+            .description{
+                font-family: $font-family-base;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                text-align: center;
+                color: hsl(226, 11%, 37%);        
+            }
+        }
+
+        .buttons{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+
+            .remove{
+                color: hsl(227, 75%, 14%);
                 border-radius: 25px;
-                background-color: hsl(0, 0%, 78%);
-                transition: .4s;
-                
-                &:before{
-                    content: '';
+                border: 1px solid hsl(0, 0%, 78%);
+                width: 100px;
+                height: 40px;
+                cursor: pointer;
+                background: transparent;
+                &:hover{
+                    background-color:hsl(3, 77%, 44%) ;
+                }   
+            }
+            .switch{
+                position: relative;
+                width: 50px;
+                height: 25px;
+
+                .input{
+                    opacity: 0;
+                    width: 0;
+                    height: 0;
+                }
+                .slider{
                     position: absolute;
-                    left: 3px;
-                    bottom: 3px;
-                    width: 19px;
-                    height: 19px;
-                    background-color: #fff;
-                    border-radius: 50%;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    border-radius: 25px;
+                    background-color: hsl(0, 0%, 78%);
                     transition: .4s;
+                    
+                    &:before{
+                        content: '';
+                        position: absolute;
+                        left: 3px;
+                        bottom: 3px;
+                        width: 19px;
+                        height: 19px;
+                        background-color: #fff;
+                        border-radius: 50%;
+                        transition: .4s;
+                    }
+                }
+                .input:checked + .slider{
+                    background-color: hsl(3, 77%, 44%);
+                }
+                .input:checked + .slider:before{
+                    transform: translateX(24px);
                 }
             }
-            .input:checked + .slider{
-                background-color: hsl(3, 77%, 44%);
-            }
-            .input:checked + .slider:before{
-                transform: translateX(24px);
+
+        }
+    }
+
+    &.dark {
+        background: linear-gradient(180deg, #040918 0%, #091540 100%);
+
+        .header,
+        .card, 
+        .filter-btn{
+            background-color: hsl(225, 23%, 24%);
+
+        }
+        .title-page,
+        .title{
+            color: hsl(200, 60%, 99%)!important;
+        }
+        .description{
+            color: hsl(217, 61%, 90%)!important;
+        }
+        .remove{
+            border: 1px solid hsl(0, 0%, 93%) !important;
+            color: hsl(0, 0%, 93%) !important;
+        }
+        .filter-btn{
+            color: hsl(0, 0%, 93%);
+            &.active-btn {
+                background: hsl(3, 77%, 44%) !important;
+                color: hsl(227, 75%, 14%) !important;
             }
         }
-
+       
     }
 }
